# feelpp-scimba

./: .gitignore  CMakeLists.txt  Dockerfile  README.adoc  README.md  diffusion.ipynb  main.ipynb  pyproject.toml  readme.md  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/proposals/2025/: 2025-m1-project.tex  slide.tex
examples/: run_full_example.sh
feelpp/scimba/: Diffusion_param.py  Poisson.py  Poisson1.py  scimba_pinns.py
feelpp_scimba/: Poisson.py  Poisson1.py
feelppdb/feelpp_cfpde/exprs/: ginacExprDefaultFileName0  ginacExprDefaultFileName0.desc  ginacExprDefaultFileName1  ginacExprDefaultFileName1.desc
feelppdb/feelpp_cfpde/np_1/: cfpdes-2d-p1.information.adoc  cfpdes-2d-p1.information.txt  journal.json  omega-2.geo  omega-2.msh
feelppdb/feelpp_cfpde/np_1/cfpdes-2d-p1.exports/: Export-1.sos  Export-paraview-1.sos  Export.case  Export.cfpdes.expr.grad_u_exact.vec.0001  Export.cfpdes.expr.rhs.scl.0001  Export.cfpdes.expr.u_exact.scl.0001  Export.cfpdes.pid.scl.0001  Export.cfpdes.poisson.u.scl.0001  Export.geo  Export.timeset
feelppdb/feelpp_cfpde/np_1/cfpdes-2d-p1.measures/: values.csv
feelppdb/feelpp_cfpde/np_1/logs/: feelpp_app.INFO  feelpp_app.WARNING  feelpp_app.gaya.sarr.log.INFO.20250506-104924.790658  feelpp_app.gaya.sarr.log.WARNING.20250506-104925.790658
notebooks/: brouillon.ipynb  main.ipynb  project2.ipynb  projet1.ipynb
notebooks/feelppdb/feelpp_cfpde/exprs/: ginacExprDefaultFileName0  ginacExprDefaultFileName0.desc  ginacExprDefaultFileName1  ginacExprDefaultFileName1.desc  ginacExprDefaultFileName2  ginacExprDefaultFileName2.desc
notebooks/feelppdb/feelpp_cfpde/np_1/: cfpdes-2d-p1.information.adoc  cfpdes-2d-p1.information.txt  journal.json  omega-2.geo  omega-2.msh
notebooks/feelppdb/feelpp_cfpde/np_1/cfpdes-2d-p1.exports/: Export-1.sos  Export-paraview-1.sos  Export.case  Export.cfpdes.expr.grad_u_exact.vec.0001  Export.cfpdes.expr.rhs.scl.0001  Export.cfpdes.expr.u_exact.scl.0001  Export.cfpdes.pid.scl.0001  Export.cfpdes.poisson.u.scl.0001  Export.geo  Export.timeset
notebooks/feelppdb/feelpp_cfpde/np_1/cfpdes-2d-p1.measures/: values.csv
notebooks/feelppdb/feelpp_cfpde/np_1/logs/: feelpp_app.INFO  feelpp_app.WARNING  feelpp_app.gaya.sarr.log.INFO.20250506-105131.794106  feelpp_app.gaya.sarr.log.WARNING.20250506-105133.794106
old/.devcontainer/: Dockerfile
old/tools/: Poisson1.py
python/: requirements.txt
python/data_processing/: generate_points.py  postprocess.py
python/interfaces/: get_interpolation_data.py
python/pinn/: poisson_square_2d.py  train_pinn.py
src/bindings/: CMakeLists.txt  bindings.cpp
src/feelpp/: CMakeLists.txt  interpolation.cpp  interpolation.hpp  main.cpp  mesh.cpp  mesh.hpp  pde_solver.cpp  pde_solver.hpp
tests/: conftest.py  test_initialization.py
tools/: Diffusion_param.py  Poisson.py  laplacian2D.ipynb  scimba_pinns.py
tools/networks/: test.pth
